Added article and userlist pages

--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
       <input class="standart-form__input" type="text" id="username" name="username" placeholder="Enter your username">
       <label class="standart-form__label" for="password">Password</label>
       <input class="standart-form__input" type="password" id="password" name="password" placeholder="Enter your password">
+      <a class="standart-form__link" href="http://localhost:63342/VeeArc/register.html">Don't have an account? Sign up</a>
       <button class="standart-form__button login-button">Log in</button>
     </div>
   </div>
