--- a/register.html
+++ b/register.html
@@ -21,6 +21,7 @@
       <input class="standart-form__input" type="password" id="password" name="password" placeholder="Enter your password">
       <label class="standart-form__label" for="confirm-password">Confirm Password</label>
       <input class="standart-form__input" type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password">
+      <a class="standart-form__link" href="http://localhost:63342/VeeArc/login.html">Already have an account? Log in</a>
       <button class="standart-form__button login-button">Sign up</button>
     </div>
   </div>
