--- a/article.html
+++ b/article.html
@@ -13,30 +13,25 @@
   <header class="header">
     <div class="container">
       <div class="header__container">
-        <a class="logo">VeeLab</a>
+        <a class="logo" href="http://localhost:63342/VeeArc/">VeeArc</a>
         <div class="menu">
-          <input class="menu__checkbox" type="checkbox" id="side-menu"/>
-          <label class="menu__label" for="side-menu">
+          <div class="menu__burger">
             <span class="menu__icon"></span>
             <span class="menu__icon"></span>
             <span class="menu__icon"></span>
-          </label>
+          </div>
           <nav class="menu__body">
             <ul class="menu__list">
               <li class="menu__item">
-                <a class="menu__link" href="#">Home</a>
+                <a class="menu__link" href="http://localhost:63342/VeeArc">Home</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">TestTest</a>
+                <a class="menu__link" href="#">Create</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">TestTest</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#">TestTest</a>
-              </li>
-              <li class="menu__item">
-                <button class="login-button">Login</button>
+                <a class="menu__login" href="http://localhost:63342/VeeArc/login.html">
+                  <button class="login-button">Login</button>
+                </a>
               </li>
             </ul>
           </nav>
@@ -47,10 +42,24 @@
   <main class="main">
     <div class="container">
       <article class = "article">
-
+        <img class="article__item article__image" src="https://miro.medium.com/v2/resize:fit:828/0*Rf_AagmKytTKjRv-" alt="Article 1 Image">
+        <h2 class="article__item article__title">Frontend developer?</h2>
+        <p class="article__item article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+        <p class="article__item article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+        <p class="article__item article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+        <p class="article__item article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+        <p class="article__item article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+        <p class="article__item article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
       </article>
     </div>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__container">
+        <p class="footer__rights">&copy; 2023 VeeArc. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 </html>
